# pi-motor

./: .gitignore  CMakeLists.txt  application.cpp  application.h  clk.cpp  clk.h  connection.cpp  connection.h  dma.cpp  dma.h  dma_buffer.cpp  dma_buffer.h  gpio.cpp  gpio.h  mailbox.cpp  mailbox.h  main.cpp  memory.cpp  memory.h  memory_block.cpp  memory_block.h  motor_shield.cpp  motor_shield.h  protocol.proto  pwm.cpp  pwm.h  server.cpp  server.h  spi.cpp  spi.h  sudo_gdb.sh  trinamic.cpp  trinamic.h
test_client/: connection.py  protocol_pb2.py  test.py
