cmake_minimum_required(VERSION 3.9)
project(motor)
file(GLOB SOURCE_FILES *.cpp)
find_package(Protobuf REQUIRED)
include_directories(${PROTOBUF_INCLUDE_DIRS} ${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS protocol.proto)
add_executable(motor ${SOURCE_FILES} ${PROTO_SRCS})
target_link_libraries(motor -lpthread -lPocoFoundation -lPocoNet ${PROTOBUF_LIBRARIES})
set_property(TARGET motor PROPERTY CXX_STANDARD 17)
set_property(TARGET motor PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
